Se agragan imagenes de la letra P a la U

--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">P</h1>
-                <h3>For </h3>
+                <h3>For Pig </h3>
             </div>
             <div class="col-8">
-                <img src="" >
+                <img src="./Pictures/P-Pig.jfif" >
             </div>
         </div>
         <hr>
@@ -257,10 +257,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">Q</h1>
-                <h3> </h3>
+                <h3>For Quial</h3>
             </div>
             <div class="col-8">
-                <img src="" >
+                <img src="./Pictures/Q-Quail.jfif" >
             </div>
         </div>
         <hr>
@@ -270,10 +270,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1"></h1>
-                <h3>For </h3>
+                <h3>For Rabbit</h3>
             </div>
             <div class="col-8">
-                <img src="" >
+                <img src="./Pictures/R- Rabbit.jfif" >
             </div>
         </div>
         <hr>
@@ -286,8 +286,7 @@
                 <h3>For Salt</h3>
             </div>
             <div class="col-8">
-                <!-- insert img -->
-              
+                <img src="./Pictures/S- Salt.jfif" >
             </div>
         </div>
         <hr>
@@ -297,10 +296,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">T</h1>
-                <h3>For </h3>
+                <h3>For Turkey</h3>
             </div>
             <div class="col-8">
-                <!-- insert img -->
+                <img src="./Pictures/T-Turkey.jfif" >
               
             </div>
         </div>
@@ -311,10 +310,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">U</h1>
-                <h3> </h3>
+                <h3>For Umbrella </h3>
             </div>
             <div class="col-8">
-
+                <img src="./Pictures/U - Umbrella.jpg" >
             </div>
         </div>
         <hr>
